# jarvisMk3

./: .envTemplate  .gitattributes  .gitignore  AI.py  Dockerfile  README.md  calendarGoogle.py  docker-compose.yml  jarvMain.py  main.py  music.py  pyproject.toml  requirements.txt  runOllama.sh
GoogleAPI/: calendarGoogle.py  googleTokenManager.py
ModelStorage/: Classifier.py  ClassifierServer.py  Modelfile
jarenv/: pyvenv.cfg
