[project]
name = "jarvismk2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "kokoro-onnx>=0.4.5",
    "pyttsx3>=2.98",
    "sounddevice>=0.5.1",
    "speechrecognition>=3.14.1",
    "wikipedia>=1.4.0",
    "wolframalpha>=5.1.3",
]
